add control to avoid duplicate images

--- a/templates/Coaster/image-upload.html.twig
+++ b/templates/Coaster/image-upload.html.twig
@@ -50,7 +50,8 @@
 {% block javascripts %}
     <script type="text/javascript">
         $('form').submit(function(){
-            $(this).find(':input[type=submit]').prop('disabled', true);
+            const $btn = $(this).find('button[type=submit]');
+            $btn.prop('disabled', true).text('{{ 'image_upload.form.uploading'|trans }}');
         });
     </script>
 {% endblock %}
