--- a/templates/Includes/_review_item.html.twig
+++ b/templates/Includes/_review_item.html.twig
@@ -7,111 +7,113 @@
      data-review-actions-upvoted-value="false"
      data-review-actions-upvote-url-value="{{ path('review_upvote', {'id': review.id, '_locale': locale}) }}"
      data-review-actions-report-url-value="{{ path('review_report', {'id': review.id, '_locale': locale}) }}">
-  <div class="media-left">
-    <a href="{{ path('user_show', {'slug': review.user.slug}) }}">
-      {{ helper.profilePicture(review.user, 'img-circle img-sm') }}
-    </a>
-  </div>
-
-  <div class="media-body">
-    <div class="media-heading">
-      <a href="{{ path('user_show', {'slug': review.user.slug}) }}" class="text-semibold">
-        {{ review.user.displayName }}
-      </a>
-      {{ helper.starRating(review.value) }}
-      <span class="media-annotation dotted">{{ review.updatedAt|ago }}</span>
+    <div class="media-left">
+        <a href="{{ path('user_show', {'slug': review.user.slug}) }}">
+            {{ helper.profilePicture(review.user, 'img-circle img-sm') }}
+        </a>
     </div>
 
-    {% if review.pros|length > 0 or review.cons|length > 0 %}
-      <p class="mb-10">
-        {% for pros in review.pros %}
-          <span class="label label-flat label-rounded border-success text-success-600">{{ pros.name|trans([], 'database') }}</span>
-        {% endfor %}
-        {% for cons in review.cons %}
-          <span class="label label-flat label-rounded border-danger text-danger-600">{{ cons.name|trans([], 'database') }}</span>
-        {% endfor %}
-      </p>
-    {% endif %}
-
-    {% if review.review and (displayReviewsInAllLanguages or review.language == app.request.locale) %}
-      {% if review.review|length > 200 %}
-        <div class="review-content" data-review-actions-target="reviewContent">
-          <p class="review-short">{{ review.review|slice(0, 200) }}...
-            <a href="#" class="expand-review" data-action="review-actions#toggleReview" data-review-actions-target="expandButton">
-              <i class="icon-arrow-down22"></i>
+    <div class="media-body">
+        <div class="media-heading">
+            <a href="{{ path('user_show', {'slug': review.user.slug}) }}" class="text-semibold">
+                {{ review.user.displayName }}
             </a>
-          </p>
-          <p class="review-full" style="display: none;">{{ review.review }}
-            <a href="#" class="collapse-review" data-action="review-actions#toggleReview" data-review-actions-target="collapseButton">
-              <i class="icon-arrow-up22"></i>
-            </a>
-          </p>
+            {{ helper.starRating(review.value) }}
+            <span class="media-annotation dotted">{{ review.updatedAt|ago }}</span>
         </div>
-      {% else %}
-        <p>{{ review.review }}</p>
-      {% endif %}
-    {% endif %}
 
-    <ul class="list-inline list-inline-separate text-size-small">
-      <li>
-        <span data-review-actions-target="upvoteCount">{{ review.upvotes|length }}</span>
-        <a href="#" data-action="review-actions#upvote" data-review-actions-target="upvoteButton">
-          <i class="icon-arrow-up22 text-success"></i>
-        </a>
-      </li>
-      {% if is_granted('ROLE_USER') %}
-        <li>
-          <a href="#" data-action="review-actions#openReportModal" data-review-actions-target="reportButton" title="{{ 'review.report'|trans }}">
-            <i class="icon-flag8 text-size-small text-default"></i>
-          </a>
-        </li>
-      {% endif %}
-      {% if is_granted('update', review) %}
-        <li>
-          <a href="{{ path('review_form', {'id': review.coaster.id}) }}">
-            {{ 'review.update'|trans }}
-          </a>
-        </li>
-      {% endif %}
-      {% if is_granted('delete', review) %}
-        <li>
-          <a onclick="deleteRating({{ review.id }})">{{ 'review.delete'|trans }}</a>
-        </li>
-      {% endif %}
-    </ul>
+        {% if review.pros|length > 0 or review.cons|length > 0 %}
+            <p class="mb-10">
+                {% for pros in review.pros %}
+                    <span
+                        class="label label-flat label-rounded border-success text-success-600">{{ pros.name|trans([], 'database') }}</span>
+                {% endfor %}
+                {% for cons in review.cons %}
+                    <span
+                        class="label label-flat label-rounded border-danger text-danger-600">{{ cons.name|trans([], 'database') }}</span>
+                {% endfor %}
+            </p>
+        {% endif %}
 
-    <!-- Report Modal -->
-    {% if is_granted('ROLE_USER') %}
-      <div id="reportModal-{{ review.id }}" class="modal fade" data-review-actions-target="reportModal">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h5 class="modal-title">{{ 'review.report_title'|trans }}</h5>
+        {% if review.review and (displayReviewsInAllLanguages or review.language == app.request.locale) %}
+            <div class="review-content mb-10" data-review-actions-target="reviewContent" style="display: flex; align-items: end;">
+                <p class="no-margin review-text"
+                   style="display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;"
+                   data-review-actions-target="reviewText">
+                    {{ review.review }}
+                </p>
+                <a href="#" class="expand-review" data-action="review-actions#toggleReview" data-review-actions-target="expandButton" style="display: none;">
+                    <i class="icon-arrow-down22"></i>
+                </a>
+                <a href="#" class="collapse-review" data-action="review-actions#toggleReview" data-review-actions-target="collapseButton" style="display: none;">
+                    <i class="icon-arrow-up22"></i>
+                </a>
             </div>
+        {% endif %}
 
-            <form data-action="review-actions#submitReport">
-              <div class="modal-body">
-                <div class="form-group">
-                  <label>{{ 'review.report_reason'|trans }}</label>
-                  <select name="reason" class="form-control">
-                    <option value="offensive">{{ 'review.reason.offensive'|trans }}</option>
-                    <option value="inappropriate">{{ 'review.reason.inappropriate'|trans }}</option>
-                    <option value="incorrect">{{ 'review.reason.incorrect'|trans }}</option>
-                    <option value="spam">{{ 'review.reason.spam'|trans }}</option>
-                    <option value="other">{{ 'review.reason.other'|trans }}</option>
-                  </select>
+        <ul class="list-inline list-inline-separate text-size-small">
+            <li>
+                <span data-review-actions-target="upvoteCount">{{ review.upvotes|length }}</span>
+                <a href="#" data-action="review-actions#upvote" data-review-actions-target="upvoteButton">
+                    <i class="icon-arrow-up22 text-success"></i>
+                </a>
+            </li>
+            {% if is_granted('ROLE_USER') %}
+                <li>
+                    <a href="#" data-action="review-actions#openReportModal" data-review-actions-target="reportButton"
+                       title="{{ 'review.report'|trans }}">
+                        <i class="icon-flag8 text-size-small text-default"></i>
+                    </a>
+                </li>
+            {% endif %}
+            {% if is_granted('update', review) %}
+                <li>
+                    <a href="{{ path('review_form', {'id': review.coaster.id}) }}">
+                        {{ 'review.update'|trans }}
+                    </a>
+                </li>
+            {% endif %}
+            {% if is_granted('delete', review) %}
+                <li>
+                    <a onclick="deleteRating({{ review.id }})">{{ 'review.delete'|trans }}</a>
+                </li>
+            {% endif %}
+        </ul>
+
+        <!-- Report Modal -->
+        {% if is_granted('ROLE_USER') %}
+            <div id="reportModal-{{ review.id }}" class="modal fade" data-review-actions-target="reportModal">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h5 class="modal-title">{{ 'review.report_title'|trans }}</h5>
+                        </div>
+
+                        <form data-action="review-actions#submitReport">
+                            <div class="modal-body">
+                                <div class="form-group">
+                                    <label>{{ 'review.report_reason'|trans }}</label>
+                                    <select name="reason" class="form-control">
+                                        <option value="offensive">{{ 'review.reason.offensive'|trans }}</option>
+                                        <option value="inappropriate">{{ 'review.reason.inappropriate'|trans }}</option>
+                                        <option value="incorrect">{{ 'review.reason.incorrect'|trans }}</option>
+                                        <option value="spam">{{ 'review.reason.spam'|trans }}</option>
+                                        <option value="other">{{ 'review.reason.other'|trans }}</option>
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-link"
+                                        data-dismiss="modal">{{ 'review.cancel'|trans }}</button>
+                                <button type="submit"
+                                        class="btn btn-primary">{{ 'review.submit_report'|trans }}</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-              </div>
-
-              <div class="modal-footer">
-                <button type="button" class="btn btn-link" data-dismiss="modal">{{ 'review.cancel'|trans }}</button>
-                <button type="submit" class="btn btn-primary">{{ 'review.submit_report'|trans }}</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    {% endif %}
-  </div>
+            </div>
+        {% endif %}
+    </div>
 </div>
