--- a/templates/Default/index.html.twig
+++ b/templates/Default/index.html.twig
@@ -158,7 +158,7 @@
       {% if missingImages|length > 1 %}
       <div class="panel panel-flat border-top-teal">
         <div class="panel-heading">
-          <h6 class="panel-title">{{ 'index.missingCoasters'|trans }}</h6>
+          <h6 class="panel-title">{{ 'index.missingImages'|trans }}</h6>
         </div>
         <div class="panel-body">
           <ul class="list-feed">
