--- a/templates/Review/form.html.twig
+++ b/templates/Review/form.html.twig
@@ -4,22 +4,16 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block javascripts %}
-  <script src="{{ asset('js/plugins/rateit/jquery.rateit.min.js') }}"></script>
-  <script type="text/javascript" src="{{ asset('js/plugins/select2.min.js') }}"></script>
-  <script type="text/javascript" src="{{ asset('js/pages/form_select2.js') }}"></script>
-  <script src="{{ asset('js/plugins/bootstrap-datepicker/bootstrap-datepicker.min.js') }}"></script>
+
   <script type="text/javascript">
     $('document').ready(function() {
       $('.rating-coaster').rateit({max: 5, step: 0.5, backingfld: '#review_value', resetable: false, mode: 'font'});
-      $('select').select2({maximumSelectionLength: 3});
-      $('.datepicker').datepicker({format: 'yyyy-mm-dd', autoclose: true});
     });
   </script>
 {% endblock %}
 
 {% block stylesheets %}
-  <link rel="stylesheet" href="{{ asset('js/plugins/rateit/rateit.css') }}">
-  <link rel="stylesheet" href="{{ asset('js/plugins/bootstrap-datepicker/bootstrap-datepicker.min.css') }}">
+
 {% endblock %}
 
 {% block body %}
@@ -38,15 +32,38 @@
       </div>
       <div class="form-group">
         {{ form_label(form.riddenAt, "", {'label_attr': {'class': 'control-label'}}) }}
-        {{ form_widget(form.riddenAt, {'attr': {'class': 'form-control datepicker'}}) }}
+        {{ form_widget(form.riddenAt, {
+          'attr': {
+            'class': 'form-control',
+            'data-controller': 'datepicker',
+            'data-datepicker-format-value': 'yyyy-mm-dd',
+            'data-datepicker-autoclose-value': 'true'
+          }
+        }) }}
       </div>
       <div class="form-group">
         {{ form_label(form.pros, "", {'label_attr': {'class': 'control-label'}}) }}
-        {{ form_widget(form.pros) }}
+        {{ form_widget(form.pros, {
+          'attr': {
+            'data-controller': 'enhanced-select',
+            'data-enhanced-select-multiple-value': 'true',
+            'data-enhanced-select-searchable-value': 'true',
+            'data-enhanced-select-maximum-selection-length-value': '3',
+            'data-enhanced-select-placeholder-value': 'Select pros...'
+          }
+        }) }}
       </div>
       <div class="form-group">
         {{ form_label(form.cons, "", {'label_attr': {'class': 'control-label'}}) }}
-        {{ form_widget(form.cons) }}
+        {{ form_widget(form.cons, {
+          'attr': {
+            'data-controller': 'enhanced-select',
+            'data-enhanced-select-multiple-value': 'true',
+            'data-enhanced-select-searchable-value': 'true',
+            'data-enhanced-select-maximum-selection-length-value': '3',
+            'data-enhanced-select-placeholder-value': 'Select cons...'
+          }
+        }) }}
       </div>
       <div class="form-group">
         {{ form_label(form.review, "", {'label_attr': {'class': 'control-label'}}) }}
@@ -54,7 +71,12 @@
       </div>
       <div class="form-group">
         {{ form_label(form.language, "", {'label_attr': {'class': 'control-label'}}) }}
-        {{ form_widget(form.language) }}
+        {{ form_widget(form.language, {
+          'attr': {
+            'data-controller': 'enhanced-select',
+            'data-enhanced-select-placeholder-value': 'Select language...'
+          }
+        }) }}
       </div>
       <div class="text-right">
         <button type="submit" class="btn btn-primary">
