--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -111,6 +111,9 @@
 // Import additional CSS components
 @import "../css/enhanced-select.css";
 @import "../css/image-optimization.css";
+@import "../css/plugins/circular-progress.css";
+@import "../css/components/toggle-switch.css";
+@import "../css/components/map.css";
 
 
 // Summary Feedback Styles (custom component)
