--- a/templates/Includes/filter_sidebar.html.twig
+++ b/templates/Includes/filter_sidebar.html.twig
@@ -1,4 +1,4 @@
-<div class="sidebar sidebar-secondary sidebar-default">
+<div class="sidebar sidebar-secondary sidebar-default" data-controller="filter" data-filter-map-outlet=".map-container">
     <div class="sidebar-content">
         <form id="form-filter" action="#">
             <div class="sidebar-category">
@@ -15,7 +15,7 @@
 
                 <div class="category-content">
                     <div class="form-group">
-                        <div class="checkbox checkbox-right checkbox-switchery switchery-xs">
+                        <div class="checkbox checkbox-right checkbox-switchery switchery-xs" data-controller="toggle-switch">
                             <label class="display-block">
                                 {{ 'map_index.filter.status'|trans }}
                                 <input name="filters[status]" type="checkbox"
@@ -24,11 +24,11 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="checkbox checkbox-right checkbox-switchery switchery-xs">
+                        <div class="checkbox checkbox-right checkbox-switchery switchery-xs" data-controller="toggle-switch">
                             <label class="display-block">
                                 {{ 'map_index.filter.kiddie'|trans }}
                                 <input name="filters[kiddie]" type="checkbox" class="switchery"
-                                       class="switchery" {% if filters.kiddie is defined and filters.kiddie == "on" %} checked{% endif %}>
+                                       {% if filters.kiddie is defined and filters.kiddie == "on" %} checked{% endif %}>
                             </label>
                         </div>
                     </div>
@@ -46,11 +46,10 @@
                     {% endif %}
                     <div class="form-group">
                         <input type="text" class="form-control" name="filters[name]"
-                               placeholder="{{ 'map_index.filter.name'|trans }}"
-                               onkeyup="filterData();">
+                               placeholder="{{ 'map_index.filter.name'|trans }}">
                     </div>
                     <div class="form-group">
-                        <select class="form-control" name="filters[manufacturer]" onchange="filterData();">
+                        <select class="form-control" name="filters[manufacturer]">
                             <option value="">{{ 'map_index.filter.manufacturer'|trans }}</option>
                             {% for manufacturer in filtersForm.manufacturer %}
                                 <option value="{{ manufacturer.id }}">{{ manufacturer.name }}</option>
@@ -58,7 +57,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <select class="form-control" name="filters[openingDate]" onchange="filterData();">
+                        <select class="form-control" name="filters[openingDate]">
                             <option value="">{{ 'map_index.filter.openingDate'|trans }}</option>
                             {% for openingDate in filtersForm.openingDate %}
                                 <option value="{{ openingDate.year }}">{{ openingDate.year }}</option>
@@ -66,7 +65,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <select class="form-control" name="filters[score]" onchange="filterData();">
+                        <select class="form-control" name="filters[score]">
                             <option value="">{{ 'map_index.filter.score'|trans }}</option>
                             {% for i in range(10, 90, 10) %}
                                 <option value="{{ i }}">{{ 'map_index.filter.atleast'|trans({'count': i}) }}</option>
