--- a/templates/Nearby/index.html.twig
+++ b/templates/Nearby/index.html.twig
@@ -14,14 +14,14 @@
 {% endblock %}
 
 {% block javascripts %}
-  <script type="text/javascript" src="{{ asset('js/plugins/switchery.min.js') }}"></script>
   <script type="text/javascript">
-    var elems = Array.prototype.slice.call(document.querySelectorAll('.switchery'));
-    elems.forEach(function(html) {
-      var switchery = new Switchery(html);
-      html.addEventListener('click', function() {
-        filterData();
-      })
+    // Switchery is auto-loaded by webpack, just add event listeners
+    document.addEventListener('DOMContentLoaded', function() {
+      document.querySelectorAll('.switchery').forEach(function(element) {
+        element.addEventListener('change', function() {
+          filterData();
+        });
+      });
     });
   </script>
   <script type="text/javascript">
