--- a/templates/Park/show.html.twig
+++ b/templates/Park/show.html.twig
@@ -193,6 +193,5 @@
 {% endblock %}
 
 {% block stylesheets %}
-
-    <link rel="stylesheet" href="{{ asset('js/plugins/round-circle/roundcircle.css') }}">
+    {# Circular progress CSS is now bundled with webpack #}
 {% endblock %}
