--- a/templates/Top/edit.html.twig
+++ b/templates/Top/edit.html.twig
@@ -157,5 +157,5 @@
               e.preventDefault();
       });
   </script>
-  <script type="text/javascript" src="{{ asset('js/plugins/touch-punch/jquery.ui.touch-punch.min.js') }}"></script>
+  {# Touch support is now auto-loaded by webpack for .ui-sortable elements #}
 {% endblock %}
