--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -114,6 +114,7 @@
 @import "../css/plugins/circular-progress.css";
 @import "../css/components/toggle-switch.css";
 @import "../css/components/map.css";
+@import "../css/components/search.css";
 
 
 // Summary Feedback Styles (custom component)
